@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2019 Australian Signals Directorate
+ * Copyright 2010-2020 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,10 +15,11 @@
  */
 package au.gov.asd.tac.constellation.testing.jdbc;
 
-import au.gov.asd.tac.constellation.pluginframework.PluginException;
-import au.gov.asd.tac.constellation.pluginframework.PluginNotificationLevel;
-import au.gov.asd.tac.constellation.utilities.string.SeparatorConstants;
+import au.gov.asd.tac.constellation.plugins.PluginException;
+import au.gov.asd.tac.constellation.plugins.PluginNotificationLevel;
+import au.gov.asd.tac.constellation.utilities.text.SeparatorConstants;
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -52,20 +53,19 @@ class JdbcUtilities {
      * @throws IllegalAccessException
      * @throws MalformedURLException
      */
-    static Connection getConnection(final File jarFile, final String driverName, final String url, final String username, final char[] password) throws ClassNotFoundException, InstantiationException, SQLException, IllegalAccessException, MalformedURLException {
+    static Connection getConnection(final File jarFile, final String driverName, final String url, final String username, final char[] password)
+            throws MalformedURLException, ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException, SQLException {
         final URL[] searchPath = new URL[]{new URL("file:///" + jarFile.getAbsolutePath())};
         final ClassLoader clloader = URLClassLoader.newInstance(searchPath);
 
         // Note: we can't use DriverManager here: it only uses classes that have been loaded by the system class loader.
         // Since we're loading the class on the fly with our own Classloader, DriverManager will refuse to recognise it.
-        final Driver driver = (Driver) Class.forName(driverName, true, clloader).newInstance();
+        final Driver driver = (Driver) Class.forName(driverName, true, clloader).getDeclaredConstructor().newInstance();
 
         final Properties props = new Properties();
         props.put("user", username);
         props.put("password", new String(password));
-        final Connection conn = driver.connect(url, props);
-
-        return conn;
+        return driver.connect(url, props);
     }
 
     /**
